// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Users (e2e) /users (POST) 1`] = `
{
  "config": null,
  "email": "a@a.com",
  "firstname": "a",
  "lastname": "a",
  "phone": null,
}
`;

exports[`Users (e2e) /users (POST) 2`] = `
{
  "config": null,
  "confirmationToken": null,
  "createdAt": {},
  "email": "a@a.com",
  "enabled": true,
  "firstname": "a",
  "keycloakId": "mocked-keycloak-user-id",
  "lastLogin": null,
  "lastname": "a",
  "notificationToken": null,
  "password": Any<String>,
  "passwordRequestedAt": null,
  "paymentExempted": false,
  "phone": null,
  "token": null,
  "validatedAt": {},
}
`;

exports[`Users (e2e) /users (PUT) 1`] = `
{
  "config": null,
  "email": "a@a.com",
  "firstname": "updated-name",
  "lastname": "updated-lastname",
  "phone": null,
}
`;

exports[`Users (e2e) /users (PUT) 2`] = `
{
  "config": null,
  "confirmationToken": null,
  "createdAt": null,
  "email": "a@a.com",
  "enabled": true,
  "firstname": "updated-name",
  "keycloakId": "mocked-keycloak-user-id",
  "lastLogin": null,
  "lastname": "updated-lastname",
  "notificationToken": null,
  "password": Any<String>,
  "passwordRequestedAt": null,
  "paymentExempted": false,
  "phone": null,
  "token": null,
  "validatedAt": {},
}
`;

exports[`Users (e2e) /users get the current user (GET) 1`] = `
{
  "config": null,
  "email": "a@a.com",
  "firstname": "a",
  "lastname": "a",
  "phone": null,
}
`;

exports[`V2 Users (e2e) /v2/users instructor app (POST) 1`] = `
{
  "config": null,
  "email": "a@a.com",
  "firstname": "a",
  "lastname": "a",
  "phone": null,
}
`;

exports[`V2 Users (e2e) /v2/users instructor app (POST) 2`] = `
{
  "config": null,
  "confirmationToken": null,
  "createdAt": {},
  "email": "a@a.com",
  "enabled": true,
  "firstname": "a",
  "keycloakId": "mocked-keycloak-user-id",
  "lastLogin": null,
  "lastname": "a",
  "notificationToken": null,
  "password": Any<String>,
  "passwordRequestedAt": null,
  "paymentExempted": false,
  "phone": null,
  "token": null,
  "validatedAt": {},
}
`;

exports[`V2 Users (e2e) /v2/users mobile app (POST) 1`] = `
{
  "config": null,
  "email": "a@a.com",
  "firstname": "a",
  "lastname": "a",
  "phone": null,
}
`;

exports[`V2 Users (e2e) /v2/users mobile app (POST) 2`] = `
{
  "config": null,
  "confirmationToken": Any<String>,
  "createdAt": {},
  "email": "a@a.com",
  "enabled": true,
  "firstname": "a",
  "keycloakId": "mocked-keycloak-user-id",
  "lastLogin": null,
  "lastname": "a",
  "notificationToken": null,
  "password": Any<String>,
  "passwordRequestedAt": null,
  "paymentExempted": false,
  "phone": null,
  "token": null,
  "validatedAt": null,
}
`;
